@@ -1,14 +1,13 @@
 
-What's new in Math::BigRat v0.14:
+What's new in Math::BigRat v0.15:
 
- * streamlined copy()
- * take over tests from Math::BigInt v1.74 and require it
- * inline is_zero() into bneg(), making it about 50% faster
- * more tests for bneg()
- * register callback to get notified of lib changes from Math::BigInt
- * much simpler import() logic
- * new() accepts input like new(Math::BigInt->new(123),Math::BigInt->new(7));
- * doc: as_hex(), as_bin(), add note about as_pos(), as_neg() and as_int() 
+2005-04-02 v0.15 Tels 924 tests
+ * no need to require Exporter
+ * rem no longer used 'with' from import
+ * add a few comments here and there
+ * fix import()'s handling of the lib argument (it didn't work)
+ * fix segfault under trap_nan in _bnan()
+ * remove unused IMPORT logic (require BigRat seems to work without it)
 
 #############################################################################
 
