@@ -29,7 +29,7 @@ BEGIN
   plan tests => 686;
   }
 
-use Math::BigRat;
+use Math::BigRat lib => 'Calc';
 
 use vars qw ($class $try $x $y $f @args $ans $ans1 $ans1_str $setup $CL);
 $class = "Math::BigRat";
